--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,37 @@
 * {
-    font-family: Helvetica;
+    font-family: sans-serif;
+}
+
+.section {
+    cursor: pointer !important;
+}
+
+.section:hover {
+    background: linear-gradient(to right, white, rgba(2, 2, 2, 0.1), white);
+}
+
+.blogs {
+    animation: 3s fadeIn;
+}
+
+@keyframes fadeIn {
+    from {
+        display: flex;
+        opacity: 0;
+        margin: 0px;
+    }
+}
+
+.card {
+    background: url('http://i.imgur.com/lDDB0R0.png');
+    background-size: cover;
+    padding: 35px !important;
+}
+
+.card-action a .material-icons {
+    cursor: pointer;
+}
+
+.card-action a .material-icons:hover {
+    color: rgba(255, 255, 255, 0.589);
 }
