added delete icon and created delete function;

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -28,7 +28,7 @@
     padding: 35px !important;
 }
 
-.card-action a .material-icons {
+.card-action a .material-icons, .delete {
     cursor: pointer;
 }
 
