--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,6 +2,16 @@
     font-family: sans-serif;
 }
 
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
+
 .section {
     cursor: pointer !important;
 }
@@ -34,4 +44,13 @@
 
 .card-action a .material-icons:hover {
     color: rgba(255, 255, 255, 0.589);
+}
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: -50px;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
 }
